<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ch.cpnv.bookmybook.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_new_rent"
        android:name="ch.cpnv.bookmybook.ui.newrent.NewRentFragment"
        android:label="@string/menu_new_rent"
        tools:layout="@layout/fragment_new_rent" />

    <fragment
        android:id="@+id/nav_new_book"
        android:name="ch.cpnv.bookmybook.ui.newbook.NewBookFragment"
        android:label="@string/menu_new_book"
        tools:layout="@layout/fragment_new_book" />
    <fragment
        android:id="@+id/nav_books"
        android:name="ch.cpnv.bookmybook.ui.books.BookFragment"
        android:label="BookFragment" />
</navigation>