<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.newrent.NewRentFragment">

    <TextView
        android:id="@+id/BookTitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/menu_new_book" />

    <EditText
        android:id="@+id/BookEditTextName"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:autofillHints="book_name"
        android:ems="10"
        android:hint="@string/form_book_text_name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BookTitle1" />

    <EditText
        android:id="@+id/BookEditTextDescription"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:autofillHints="book_name"
        android:ems="10"
        android:hint="@string/form_book_text_description"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BookEditTextName" />

    <EditText
        android:id="@+id/BookEditTextIsbn"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:autofillHints="book_name"
        android:ems="10"
        android:hint="@string/form_book_text_isbn"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BookEditTextDescription" />

    <Button
        android:id="@+id/BookButtonSave"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/save_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/rentButtonContacts"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:text="@string/form_book_button_scanner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BookEditTextIsbn" />


</androidx.constraintlayout.widget.ConstraintLayout>