<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.newbook.NewBookFragment">

    <EditText
        android:id="@+id/RentEditDateStart"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:autofillHints="book_name"
        android:ems="10"
        android:hint="@string/form_rent_hint_date"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RentTitle1" />

    <EditText
        android:id="@+id/RentEditDateEnd"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:autofillHints="book_name"
        android:ems="10"
        android:hint="@string/form_rent_hint_date"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RentEditDateStart" />


    <TextView
        android:id="@+id/RentTitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginTop="16dp"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/menu_new_rent" />

    <Button
        android:id="@+id/RentButtonSave"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/save_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/RentButtonContacts"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:text="@string/form_rent_button_contacts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RentEditDateEnd" />

</androidx.constraintlayout.widget.ConstraintLayout>